--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,4 +2,4 @@
 name = "my-remix-project"
 compatibility_date = "2024-09-09"
 main = "./build/worker/index.js"
-experimental_assets = { directory = "./build/client" }
+assets = { directory = "./build/client" }
